--- a/addons/loan_collection/views/collection_points_views.xml
+++ b/addons/loan_collection/views/collection_points_views.xml
@@ -2,38 +2,39 @@
     <data>
         <!-- views -->
         <record model="ir.ui.view" id="collection_points_list">
-            <field name="name">分单管理</field>
+            <field name="name">Order Allocation Management</field>
             <field name="model">collection.points</field>
             <field name="arch" type="xml">
                 <tree create='0' import="0" export_xlsx="0" limit="20" default_order="department_id,today_processed_qty desc,unprocessed_qty desc">
-                    <field name="sequence" string="序号" optional="show"/>
-                    <field name="user_id" string="姓名" options="{'no_open': 'True','no_create':True}" optional="show"/>
-                    <field name="group_id" string="角色" options="{'no_open': 'True','no_create':True}" optional="show"/>
-                    <field name="collection_stage_id" string="催收阶段" options="{'no_open': 'True','no_create':True}" optional="show"/>
-                    <field name="department_id" string="所属团队" options="{'no_open': 'True','no_create':True}" optional="show"/>
-                    <field name="today_processed_qty" string="今日已处理单量" optional="show"/>
-                    <field name="unprocessed_qty" string="剩余待处理单量" optional="show"/>
-                    <field name="max_daily_intake" string="每日进件上限" optional="show"/>
-                    <field name="loan_product_ids_str" string="进件产品" optional="show"/>
-                    <field name="is_input" string="是否进件" optional="show" widget="boolean_toggle"/>
-                    <button name="action_manager" type="object" string="管理"/>
-                    <button name="action_team_adjustment" type="object" string="团队调整"/>
+                    <field name="sequence" optional="show"/>
+                    <field name="user_id" options="{'no_open': 'True','no_create':True}" optional="show"/>
+                    <field name="group_id" options="{'no_open': 'True','no_create':True}" optional="show"/>
+                    <field name="collection_stage_id" options="{'no_open': 'True','no_create':True}" optional="show"/>
+                    <field name="department_id" options="{'no_open': 'True','no_create':True}" optional="show"/>
+                    <field name="today_processed_qty" optional="show"/>
+                    <field name="unprocessed_qty" optional="show"/>
+                    <field name="max_daily_intake" optional="show"/>
+                    <field name="loan_product_ids_str" optional="show" class="multiLine-item-pre-wrap" />
+                    <field name="is_input" optional="show" widget="boolean_toggle"/>
+                    <button name="action_manager" type="object" string="Management"/>
+                    <button name="action_team_adjustment" type="object" string="Team Adjustment"/>
                 </tree>
             </field>
         </record>
 
         <record model="ir.ui.view" id="collection_points_form">
-            <field name="name">分单管理-管理</field>
+            <field name="name">Order Allocation Management</field>
             <field name="model">collection.points</field>
             <field name="arch" type="xml">
-                <form string="分单管理">
+                <form string="Order Allocation Management">
                     <sheet>
                         <group>
-                            <field name="user_id" string="姓名" readonly="1" options="{'no_open': 'True','no_create':True}"/>
-                            <field name="collection_stage_id" string="催收阶段" placeholder="请选择" required="1" options="{'no_open': 'True','no_create':True}"/>
-                            <field name="max_daily_intake" string="每日进件上限" placeholder="请输入≥0的整数" required="1"/>
-                            <field name="loan_product_ids" string="进件产品" widget="many2many_checkboxes" required="1"/>
-                            <field name="is_input" string="是否进件" optional="show" widget="boolean_toggle"/>
+                            <field name="user_id" readonly="1" options="{'no_open': 'True','no_create':True}"/>
+                            <field name="collection_stage_id" placeholder="Please Enter" required="1"
+                                   options="{'no_open': 'True','no_create':True}"/>
+                            <field name="max_daily_intake" placeholder="Please enter a non-negative integer" required="1"/>
+                            <field name="loan_product_ids" widget="many2many_checkboxes" required="1"/>
+                            <field name="is_input" optional="show" widget="boolean_toggle"/>
                         </group>
                     </sheet>
                 </form>
@@ -41,17 +42,17 @@
         </record>
 
         <record model="ir.ui.view" id="collection_points_form2">
-            <field name="name">分单管理-团队调整</field>
+            <field name="name">Order Allocation Management - Team Adjustment</field>
             <field name="model">collection.points</field>
             <field name="arch" type="xml">
-                <form string="分单管理">
+                <form string="Order Allocation Management">
                     <sheet>
                         <group>
-                            <field name="user_id" string="姓名" readonly="1" options="{'no_open': 'True','no_create':True}"/>
-                            <label for="department_id" string="所属团队"/>
+                            <field name="user_id" readonly="1" options="{'no_open': 'True','no_create':True}"/>
+                            <label for="department_id" string="Membership Group"/>
                             <div>
-                                <field name="department_id" placeholder="请选择" class="oe_inline"/>
-                                <field name="sec_department_id" placeholder="请选择" class="oe_inline"
+                                <field name="department_id" placeholder="Please Enter" class="oe_inline"/>
+                                <field name="sec_department_id" placeholder="Please Enter" class="oe_inline"
                                        domain="[('parent_id', '=', department_id)]"
                                        invisible="not department_id"
                                 />
@@ -67,7 +68,7 @@
 
         <!-- search view -->
         <record model="ir.ui.view" id="collection_points_search">
-            <field name="name">分单管理</field>
+            <field name="name">Order Allocation Management</field>
             <field name="model">collection.points</field>
             <field name="arch" type="xml">
                 <search>
@@ -80,7 +81,7 @@
         </record>
 
         <record model="ir.actions.server" id="collection_points_action">
-            <field name="name">分单管理</field>
+            <field name="name">Order Allocation Management</field>
             <field name="type">ir.actions.server</field>
             <field name="state">code</field>
             <field name="model_id" ref="loan_collection.model_collection_points"/>
