--- a/addons/loan_collection/wizard/collection_stage_setting_wizard.xml
+++ b/addons/loan_collection/wizard/collection_stage_setting_wizard.xml
@@ -4,17 +4,17 @@
 
 
         <record id="collection_stage_setting_wizard_delete_form" model="ir.ui.view">
-            <field name="name">催收阶段配置删除向导</field>
+            <field name="name">Collection Phase Configuration Delete Wizard</field>
             <field name="model">collection.stage.setting.wizard</field>
             <field name="arch" type="xml">
                 <form>
                     <sheet>
-                        <p>是否确定删除该条催收阶段配置？</p>
+                        <p>Are you sure you want to delete this collection stage configuration?</p>
                     </sheet>
                     <footer>
-                        <button name="action_confirm" string="确认" type="object"
+                        <button name="action_confirm" string="Submit" type="object"
                                 class="btn-primary"/>
-                        <button string="取消" class="btn-default" special="cancel"/>
+                        <button string="Cancel" class="btn-default" special="cancel"/>
                     </footer>
                 </form>
             </field>
@@ -22,7 +22,7 @@
 
 
         <record id="collection_stage_setting_wizard_delete_action" model="ir.actions.act_window">
-            <field name="name">删除</field>
+            <field name="name">Delete</field>
             <field name="res_model">collection.stage.setting.wizard</field>
             <field name="view_mode">form</field>
             <field name="target">new</field>
