--- a/addons/loan_collection/views/collection_stage_setting_history_views.xml
+++ b/addons/loan_collection/views/collection_stage_setting_history_views.xml
@@ -2,22 +2,22 @@
     <data>
         <!-- views -->
         <record model="ir.ui.view" id="collection_stage_setting_history_list">
-            <field name="name">催收阶段管理-历史记录</field>
+            <field name="name">Collection Phase Management-History Record</field>
             <field name="model">collection.stage.setting.history</field>
             <field name="arch" type="xml">
                 <tree create='0' edit="0" delete="0" import="0" export_xlsx="0">
-                    <field name="collection_stage" string="催收阶段"/>
-                    <field name="overdue_days" string="逾期天数"/>
-                    <field name="status_select" string="状态"/>
-                    <field name="edit_date" string="编辑时间"/>
-                    <field name="edit_user_id" string="操作人" options="{'no_open': 'True','no_create':True}"/>
+                    <field name="collection_stage"/>
+                    <field name="overdue_days"/>
+                    <field name="status_select"/>
+                    <field name="edit_date"/>
+                    <field name="edit_user_id" options="{'no_open': 'True','no_create':True}"/>
                 </tree>
             </field>
         </record>
 
         <!-- search view -->
         <record model="ir.ui.view" id="collection_stage_setting_history_search">
-            <field name="name">催收阶段管理-历史记录</field>
+            <field name="name">Collection Phase Management-History Record</field>
             <field name="model">collection.stage.setting.history</field>
             <field name="arch" type="xml">
                 <search>
