--- a/addons/loan_financial/views/extension_record.xml
+++ b/addons/loan_financial/views/extension_record.xml
@@ -6,28 +6,28 @@
         <field name="model">extension.record</field>
         <field name="arch" type="xml">
             <tree create='0' import="0" export_xlsx="0" default_order="success_time desc">
-                <field name="order_no" optional="show" width="150px"/>
-                <field name="loan_uid" optional="show" width="150px"/>
-                <field name="status" optional="show" width="150px"/>
-                <field name="platform_order_no" optional="show" width="150px"/>
-                <field name="loan_user_name" optional="show" width="150px"/>
-                <field name="loan_user_phone" optional="show" width="150px"/>
-                <field name="product_id" optional="show" width="150px"/>
-                <field name="apply_time" optional="show" width="150px"/>
-                <field name="success_time" optional="show" width="150px"/>
-                <field name="extension_days" optional="show" width="150px"/>
-                <field name="order_repay_date" optional="show" width="150px"/>
-                <field name="extension_repay_date" optional="show" width="150px"/>
-                <field name="extension_amount" string='展期应付金额' optional="show" width="150px"/>
-                <field name="repayed_amount" string='展期实付金额' optional="hide" width="150px"/>
-                <field name="platform_profit" optional="hide" width="150px"/>
-                <field name="repayed_fee" optional="show" width="150px"/>
-                <field name="repayed_tax" optional="show" width="150px"/>
-                <field name="actual_entry_amount" optional="show" width="150px"/>
-                <field name="settle_amount" optional="show" width="150px"/>
-                <field name="repay_count" optional="show" width="150px"/>
-                <field name="extension_start_date" optional="show" width="150px"/>
-                <field name="extension_end_date" optional="show" width="150px"/>
+                <field name="order_no" optional="show"/>
+                <field name="loan_uid" optional="show"/>
+                <field name="status" optional="show"/>
+                <field name="platform_order_no" optional="show" />
+                <field name="loan_user_name" optional="show" />
+                <field name="loan_user_phone" optional="show" />
+                <field name="product_id" optional="show" />
+                <field name="apply_time" optional="show" />
+                <field name="success_time" optional="show" />
+                <field name="extension_days" optional="show" />
+                <field name="order_repay_date" optional="show" />
+                <field name="extension_repay_date" optional="show"/>
+                <field name="extension_amount" string='展期应付金额' optional="show" />
+                <field name="repayed_amount" string='展期实付金额' optional="hide" />
+                <field name="platform_profit" optional="hide" />
+                <field name="repayed_fee" optional="show" />
+                <field name="repayed_tax" optional="show" />
+                <field name="actual_entry_amount" optional="show" />
+                <field name="settle_amount" optional="show" />
+                <field name="repay_count" optional="show" />
+                <field name="extension_start_date" optional="show"/>
+                <field name="extension_end_date" optional="show"/>
 
                 <button name="action_show_settle_wizard" type="object" string="平账" invisible="status in ['2', '5', '6']"/>
 
