--- a/addons/loan_financial/views/repay_order.xml
+++ b/addons/loan_financial/views/repay_order.xml
@@ -6,24 +6,24 @@
         <field name="model">repay.order</field>
         <field name="arch" type="xml">
             <tree create='0' import="0" export_xlsx="0" default_order="create_date desc">
-                <field name="order_no" optional="show" width="150px"/>
-                <field name="order_user_id" optional="show" width="150px"/>
-                <field name="order_user_name" optional="show" width="150px"/>
-                <field name="order_user_phone" optional="show" width="150px"/>
-                <field name="product_id" optional="show" width="150px"/>
-                <field name="platform_order_no" optional="show" width="150px"/>
-                <field name="order_contract_amount" optional="show" width="150px"/>
-                <field name="order_loan_period" optional="show" width="150px"/>
-                <field name="order_loan_amount" optional="show" width="150px"/>
-                <field name="repay_amount" optional="show" width="150px"/>
-                <field name="pending_amount" optional="show" width="150px"/>
-                <field name="overdue_fee" optional="show" width="150px"/>
-                <field name="late_fee" optional="show" width="150px"/>
-                <field name="repay_date" optional="show" width="150px"/>
-                <field name="overdue_days" optional="show" width="150px"/>
-                <field name="correction_amount" optional="show" width="150px"/>
-                <field name="pay_complete_time" optional="show" width="150px"/>
-                <field name="withdraw_time" optional="show" width="150px"/>
+                <field name="order_no" optional="show" />
+                <field name="order_user_id" optional="show" />
+                <field name="order_user_name" optional="show" />
+                <field name="order_user_phone" optional="show" />
+                <field name="product_id" optional="show" />
+                <field name="platform_order_no" optional="show" />
+                <field name="order_contract_amount" optional="show" />
+                <field name="order_loan_period" optional="show" />
+                <field name="order_loan_amount" optional="show" />
+                <field name="repay_amount" optional="show" />
+                <field name="pending_amount" optional="show" />
+                <field name="overdue_fee" optional="show" />
+                <field name="late_fee" optional="show" />
+                <field name="repay_date" optional="show" />
+                <field name="overdue_days" optional="show" />
+                <field name="correction_amount" optional="show" />
+                <field name="pay_complete_time" optional="show" />
+                <field name="withdraw_time" optional="show" />
 
                 <button name="action_show_additional_record" type="object" string="补单"/>
                 <button name="test_action_repay" type="object" string="模拟部分还款" context="{'flag': False}"/>
@@ -53,35 +53,35 @@
         <field name="model">repay.order</field>
         <field name="arch" type="xml">
             <tree create='0' import="0" export_xlsx="0" default_order="repay_time desc">
-                <field name="order_no" optional="show" width="150px"/>
-                <field name="order_user_id" optional="show" width="150px"/>
-                <field name="order_user_name" optional="show" width="150px"/>
-                <field name="order_user_phone" optional="show" width="150px"/>
-                <field name="product_id" optional="show" width="150px"/>
-                <field name="merchant_order_no" optional="show" width="150px"/>
-                <field name="payment_setting_id" optional="show" width="150px"/>
-                <field name="payment_way_id" optional="show" width="150px"/>
-                <field name="platform_order_no" optional="show" width="150px"/>
+                <field name="order_no" optional="show" />
+                <field name="order_user_id" optional="show" />
+                <field name="order_user_name" optional="show" />
+                <field name="order_user_phone" optional="show" />
+                <field name="product_id" optional="show" />
+                <field name="merchant_order_no" optional="show" />
+                <field name="payment_setting_id" optional="show" />
+                <field name="payment_way_id" optional="show" />
+                <field name="platform_order_no" optional="show" />
                 
-                <field name="order_contract_amount" optional="show" width="150px"/>
-                <field name="order_loan_period" optional="show" width="150px"/>
-                <field name="order_loan_amount" optional="show" width="150px"/>
-                <field name="repay_amount" optional="show" width="150px"/>
-                <field name="pending_amount" optional="show" width="150px"/>
-                <field name="repayed_amount" string="实还金额" optional="show" width="150px"/>
-                <field name="platform_profit" optional="hide" width="150px"/>
-                <field name="repayed_fee" optional="show" width="150px"/>
-                <field name="repayed_tax" optional="show" width="150px"/>
-                <field name="actual_entry_amount" optional="show" width="150px"/>
-                <field name="overdue_fee" optional="show" width="150px"/>
-                <field name="late_fee" optional="show" width="150px"/>
-                <field name="repay_date" optional="show" width="150px"/>
-                 <field name="repay_time" optional="show" width="150px"/>
-                <field name="overdue_days" optional="show" width="150px"/>
-                <field name="correction_amount" optional="show" width="150px"/>
-                <field name="pay_complete_time" string="放款成功时间" optional="show" width="150px"/>
-                <field name="order_type" optional="show" width="150px"/>
-                <field name="repay_type" optional="show" width="150px"/>
+                <field name="order_contract_amount" optional="show" />
+                <field name="order_loan_period" optional="show" />
+                <field name="order_loan_amount" optional="show" />
+                <field name="repay_amount" optional="show" />
+                <field name="pending_amount" optional="show" />
+                <field name="repayed_amount" string="实还金额" optional="show" />
+                <field name="platform_profit" optional="hide" />
+                <field name="repayed_fee" optional="show" />
+                <field name="repayed_tax" optional="show" />
+                <field name="actual_entry_amount" optional="show" />
+                <field name="overdue_fee" optional="show" />
+                <field name="late_fee" optional="show" />
+                <field name="repay_date" optional="show" />
+                 <field name="repay_time" optional="show" />
+                <field name="overdue_days" optional="show" />
+                <field name="correction_amount" optional="show" />
+                <field name="pay_complete_time" string="放款成功时间" optional="show" />
+                <field name="order_type" optional="show" />
+                <field name="repay_type" optional="show" />
 
                 <button name="action_show_additional_record" type="object" string="补单"/> 
             </tree>
