--- a/addons/loan_financial/views/repay_record.xml
+++ b/addons/loan_financial/views/repay_record.xml
@@ -6,41 +6,41 @@
         <field name="model">repay.record</field>
         <field name="arch" type="xml">
             <tree create='0' import="0" export_xlsx="0" default_order="repay_time desc">
-                 <field name="order_no" optional="show" width="150px"/>
-                <field name="loan_uid" optional="show" width="150px"/>
-                <field name="loan_user_name" optional="show" width="150px"/>
-                <field name="loan_user_phone" optional="show" width="150px"/>
-                <field name="product_id" optional="show" width="150px"/>
-                <field name="merchant_order_no" string="支付ID" optional="show" width="150px"/>
-                <field name="payment_setting_id" string="支付渠道" optional="show" width="150px"/>
-                <field name="payment_way_id" string="支付方式" optional="show" width="150px"/>
-                <field name="platform_order_no" string="支付序列号" optional="show" width="150px"/>
+                 <field name="order_no" optional="show" />
+                <field name="loan_uid" optional="show" />
+                <field name="loan_user_name" optional="show" />
+                <field name="loan_user_phone" optional="show" />
+                <field name="product_id" optional="show" />
+                <field name="merchant_order_no" string="支付ID" optional="show" />
+                <field name="payment_setting_id" string="支付渠道" optional="show" />
+                <field name="payment_way_id" string="支付方式" optional="show" />
+                <field name="platform_order_no" string="支付序列号" optional="show" />
 
-                <field name="contract_amount" optional="show" width="150px"/>
-                <field name="loan_period" optional="show" width="150px"/>
-                <field name="loan_amount" optional="show" width="150px"/>
-                <field name="repay_amount" optional="show" width="150px"/>
-                <field name="order_pending_amount" optional="show" width="150px"/>
-                <field name="pending_amount" optional="show" width="150px"/>
-                <field name="write_off_amount" optional="show" width="150px"/>
+                <field name="contract_amount" optional="show" />
+                <field name="loan_period" optional="show" />
+                <field name="loan_amount" optional="show" />
+                <field name="repay_amount" optional="show" />
+                <field name="order_pending_amount" optional="show" />
+                <field name="pending_amount" optional="show" />
+                <field name="write_off_amount" optional="show" />
                 
-                <field name="amount" optional="show" width="150px"/>
-                <field name="fee" optional="show" width="150px"/>
-                <field name="tax" optional="show" width="150px"/>
-                <field name="actual_repay_amount" optional="show" width="150px"/>
-                <field name="order_overdue_fee" optional="show" width="150px"/>
-                <field name="order_late_fee" optional="show" width="150px"/>
+                <field name="amount" optional="show" />
+                <field name="fee" optional="show" />
+                <field name="tax" optional="show" />
+                <field name="actual_repay_amount" optional="show" />
+                <field name="order_overdue_fee" optional="show" />
+                <field name="order_late_fee" optional="show" />
 
-                <field name="repay_date" optional="show" width="150px"/>
-                <field name="repay_time" optional="show" width="150px"/>
-                <field name="overdue_days" optional="show" width="150px"/>
+                <field name="repay_date" optional="show" />
+                <field name="repay_time" optional="show" />
+                <field name="overdue_days" optional="show" />
 
-                <field name="correction_amount" optional="show" width="150px"/>
-                <field name="pay_time" optional="show" width="150px"/>
+                <field name="correction_amount" optional="show" />
+                <field name="pay_time" optional="show" />
 
-                <field name="repay_type" optional="show" width="150px"/>
-                <field name="cancel_time" optional="show" width="150px"/>
-                <field name="cancel_user_id" optional="show" width="150px"/>
+                <field name="repay_type" optional="show" />
+                <field name="cancel_time" optional="show" />
+                <field name="cancel_user_id" optional="show" />
                 <field name="is_cancel" column_invisible="1"/>
                 <button name="action_show_cancel_record" type="object" string="取消还款" invisible="repay_type=='2' or is_cancel"/>
             </tree>
