--- a/addons/loan_market/views/app_setting.xml
+++ b/addons/loan_market/views/app_setting.xml
@@ -10,7 +10,7 @@
                     <button class="btn-primary" name="action_create" type="object" string="新增" display="always"/>
                 </header> -->
                 <field name="item_name" optional="show"/>
-                <field name="item_overview" optional="show"/>
+                <field name="item_overview" optional="show" class="multiLine-item-pre-wrap"/>
                 <field name="write_uid" optional="show"/>
                 <field name="write_date" optional="show"/>
                 <field name="create_uid" optional="hide"/>
