--- a/addons/loan_market/views/sms_app_setting.xml
+++ b/addons/loan_market/views/sms_app_setting.xml
@@ -12,7 +12,7 @@
                 <field name="template_id" optional="show"/>
                 <field name="channel_type_id" optional="show"/>
                 <field name="app_ids" widget="many2many_tags" />
-                <field name="template" optional="show"/>
+                <field name="template" optional="show" class="multiLine-item-pre-wrap"/>
                 <field name="status" widget="boolean_toggle" readonly='1' optional="show"/>
 
                 <field name="write_uid" optional="show"/>
