--- a/addons/muk_web_appsbar/static/src/scss/sidebar.scss
+++ b/addons/muk_web_appsbar/static/src/scss/sidebar.scss
@@ -19,14 +19,12 @@
   font-size: 14px;
 }
 .o_sidebar_menu_search_input:focus {
-    color: #495057 !important;
-    background-color: #fff !important;
-    border-color: #80bdff !important;
-    outline: 0 !important;
-    box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25) !important;
+  color: #495057 !important;
+  background-color: #fff !important;
+  border-color: #80bdff !important;
+  outline: 0 !important;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25) !important;
 }
-
-
 
 .sidebar_menu .sidebar_close {
   text-align: end;
@@ -41,7 +39,7 @@
 .sidebar_menu .sidebar_close a#closeSidebar {
   font-size: 14px;
   margin-right: 10px;
-  opacity: .3;
+  opacity: 0.3;
 }
 
 .sidebar_menu .sidebar_close a#closeSidebar img {
@@ -53,14 +51,13 @@
   margin-top: 30px;
   height: 64px;
   position: relative;
-  -webkit-transition: all .3s;
-  transition: all .3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
   overflow: hidden;
 }
 
-
 .sidebar_nav .sidebar_menu {
-  padding: 0px
+  padding: 0px;
 }
 
 .sidebar_menu .sidebar .sidebar_nav {
@@ -69,7 +66,6 @@
 
 .sidebar_menu .sidebar .sidebar_logo img {
   max-width: 150px;
-
 }
 
 .sidebar_menu .sidebar .sidebar_head {
@@ -93,13 +89,13 @@
   display: block;
 }
 .o_sidebar_menu_search_found {
-    margin: 0 2px 0 3px;
-    color: #495057 !important;
-    background-color: #fff !important;
-    border-color: #80bdff !important;
-    outline: 0 !important;
-    box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25) !important;
-    transition: none;
+  margin: 0 2px 0 3px;
+  color: #495057 !important;
+  background-color: #fff !important;
+  border-color: #80bdff !important;
+  outline: 0 !important;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25) !important;
+  transition: none;
 }
 
 .sidebar_menu li a {
@@ -114,18 +110,18 @@
 }
 
 .sidebar_menu .sidebar .sidebar_menu a:hover {
-  background: #091E420F;
+  background: #091e420f;
   color: black;
 }
 
 .sidebar_menu .sidebar .sidebar_menu a:active {
-  background: #091E4224;
+  background: #091e4224;
   color: black;
 }
 
 .sidebar_menu .nav-link {
   //opacity: .5;
-  transition: .3s all;
+  transition: 0.3s all;
   font-size: 12px;
 }
 
@@ -163,3 +159,12 @@
   -webkit-transform: translateZ(0);
   //animation: invisible_menu 5s infinite;
 }
+
+// zxy start
+.nav-link:hover,
+.nav-link:focus {
+  color: #0a58ca;
+  background-color: #e9f2ff;
+}
+
+// zxy end
